Links get saved with the action popup

--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            max-width: 238px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h3>New Link</h3>
+    <button id="open_links">Open Links Page</button>
+    <p id="url"></p>
+    <input id="title">
+    <input id="tags" placeholder="Comma separated list of tags">
+    <button id="save">Save</button>
+    <script src="./background.js" type="application/javascript"></script>
 </body>
 </html>
